plugins {
    id 'java'
}

group = 'com.yourname'
version = '1.0'

repositories {
    mavenCentral()
}

dependencies {
    implementation platform("org.lwjgl:lwjgl-bom:3.4.1")

    implementation "org.lwjgl:lwjgl"
    implementation "org.lwjgl:lwjgl-assimp"
    implementation "org.lwjgl:lwjgl-glfw"
    implementation "org.lwjgl:lwjgl-openal"
    implementation "org.lwjgl:lwjgl-opengl"
    implementation "org.lwjgl:lwjgl-stb"
    implementation "org.joml:joml:1.10.5"

    // This part is the most compatible way to handle natives
    def os = System.getProperty("os.name").toLowerCase()
    def arch = System.getProperty("os.arch").toLowerCase()
    if (os.contains("win")) {
        runtimeOnly "org.lwjgl:lwjgl::natives-windows"
        runtimeOnly "org.lwjgl:lwjgl-glfw::natives-windows"
        runtimeOnly "org.lwjgl:lwjgl-opengl::natives-windows"
    } else if (os.contains("mac")) {
        if (arch.contains("aarch64") || arch.contains("arm64")) {
            runtimeOnly "org.lwjgl:lwjgl::natives-macos-arm64"
            runtimeOnly "org.lwjgl:lwjgl-glfw::natives-macos-arm64"
            runtimeOnly "org.lwjgl:lwjgl-opengl::natives-macos-arm64"
        } else {
            runtimeOnly "org.lwjgl:lwjgl::natives-macos"
            runtimeOnly "org.lwjgl:lwjgl-glfw::natives-macos"
            runtimeOnly "org.lwjgl:lwjgl-opengl::natives-macos"
        }
    }// ImGui Core (1.86.12 actually exists!)
    implementation "io.github.spair:imgui-java-binding:1.86.12"
    implementation "io.github.spair:imgui-java-lwjgl3:1.86.12"

    // The macOS natives for 1.86.12 (This single file contains the Apple Silicon fix!)
    runtimeOnly "io.github.spair:imgui-java-natives-macos:1.86.12"
}

java {
    sourceCompatibility = JavaVersion.VERSION_17
    targetCompatibility = JavaVersion.VERSION_17
}